# runtools

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/agents/: code-reviewer.md  code-reviewer.toml
.agents/commands/: review-changes.md
.agents/skills/add-cli-script/: SKILL.md
.agents/skills/add-implementation-doc/: SKILL.md
.agents/skills/e2e-testing/: SKILL.md
.agents/skills/odoo-module-scaffold/: SKILL.md
.agents/skills/odoo-restart-reminder/: SKILL.md
.agents/skills/psql-inspect/: SKILL.md
.agents/user-prompts/: 0000-basic.md  0001-initial-setup.md  Git submodule riešenie.html
.devcontainer/: .env.init  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh  requirements.txt
docs/: ai-agents.md
src/runtools/: __init__.py  dockerinfo.py  gitexport.py  gitmirror.py
